--- a/src/template/base/footer.html
+++ b/src/template/base/footer.html
@@ -1,3 +1,100 @@
 <footer class="footer">
-    
+  <div class="container">
+    <div class="footer__header box-y">
+      <div class="footer__header-logo logo">
+        <img src="images/global/logo_footer.svg" alt="" />
+      </div>
+      <div class="footer__header__form">
+        <p>отправить заявку менеджеру</p>
+        <form id="footer__form" class="form js-form">
+          <input class="form-input-title" type="hidden" name="form-title" />
+          <div class="form-send">
+            <div class="form-send__message">
+              <div class="form-send__loading"><span></span></div>
+              <p class="form-send__success">
+                Спасибо, ваша заявка принята. Менеджер свяжется с вами в
+                ближайшее время
+              </p>
+              <p class="form-send__error">
+                Что-то пошло не так. Заявка не отправлена.
+              </p>
+            </div>
+            <div class="box-y">
+              <label class="form-field">
+                <input
+                  class="form-field__input form-phone"
+                  placeholder="Телефон"
+                  type="tel"
+                  name="phone"
+                />
+              </label>
+              <button
+                type="submit"
+                class="form-send__btn btn btn--primary btn--size-md"
+              >
+                Отправить
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="footer__content box-y">
+      <div class="footer__content-item">
+        <p class="footer__content-item__title text__size-sm blue">
+          почему стоит выбрать нас?
+        </p>
+        <ul class="footer__content-item__list list--disc">
+          <li class="footer__content-item__list-item">
+            Входит в группу мировых компаний
+          </li>
+          <li class="footer__content-item__list-item">Более 10 лет на рынке</li>
+          <li class="footer__content-item__list-item">
+            Гарантия бесперебойной работы
+          </li>
+        </ul>
+      </div>
+      <div class="footer__content-item">
+        <p class="footer__content-item__title text__size-sm">меню</p>
+        <ul class="footer__content-item__list">
+          <li class="footer__content-item__list-item">
+            <a href="/">Главная</a>
+          </li>
+          <li class="footer__content-item__list-item">
+            <a href="#">О компании </a>
+          </li>
+          <li class="footer__content-item__list-item">
+            <a href="#">Решения</a>
+          </li>
+          <li class="footer__content-item__list-item">
+            <a href="#">Сервис</a>
+          </li>
+          <li class="footer__content-item__list-item">
+            <a href="#">Технологические решения</a>
+          </li>
+          <li class="footer__content-item__list-item">
+            <a href="#">Объекты</a>
+          </li>
+          <li class="footer__content-item__list-item">
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__content-item">
+        <p class="footer__content-item__title text__size-sm">Контакты</p>
+        <ul class="footer__content-item__list">
+          <li class="footer__content-item__list-item">
+            Телефон
+            <a href="tel:+78124932440">+7 812 493-24-40</a>
+          </li>
+          <li class="footer__content-item__list-item">
+            Адрес офиса продаж: Эстония, г. Таллин
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer__copyright box m:align-center">
+      <p>© 2022 Plazkat. All Rights Reserved.</p>
+    </div>
+  </div>
 </footer>
