--- a/src/scss/template/section/_specialization.scss
+++ b/src/scss/template/section/_specialization.scss
@@ -22,9 +22,14 @@
         }
       }
       img {
-        flex-basis: 48%;
+        @include media(lg) {
+          width: 48%;
+        }
       }
       &__info {
+        @include media(lg) {
+          flex-basis: 48%;
+        }
         &__title {
           margin-top: size(15);
           color: $grey-light;
@@ -44,8 +49,14 @@
           display: flex;
           flex-direction: column;
           margin-top: size(20);
+          @include media(md) {
+            width: 50%;
+            margin: 0 auto;
+            margin-top: size(30);
+          }
           @include media(lg) {
             flex-direction: row;
+            width: 100%;
             margin-top: size(30);
           }
           .btn--link {
