--- a/src/scss/template/section/_index.scss
+++ b/src/scss/template/section/_index.scss
@@ -1,4 +1,5 @@
-@import 'specialization'; 
-@import 'application'; 
-@import 'news'; 
-@import 'questions'; 
+// @import 'specialization';
+@import "application";
+// @import 'news';
+// @import 'questions';
+@import 'inspection'; 
