--- a/src/template/section/index.html
+++ b/src/template/section/index.html
@@ -1,6 +1,6 @@
-
-
-@@include("specialization.html",{}) 
-@@include("application.html",{}) 
-@@include("news.html",{}) 
-@@include("questions.html",{}) 
+<main>
+  <!-- @@include("specialization.html",{})  -->
+  @@include("inspection.html",{}) @@include("application.html",{})
+  <!-- @@include("news.html",{}) 
+    @@include("questions.html",{})  -->
+</main>
