--- a/src/scss/template/_index.scss
+++ b/src/scss/template/_index.scss
@@ -1,6 +1,6 @@
-@import 'base/index';
-@import 'section/index';
+@import "base/index";
+@import "section/index";
 
 //@import 'preloader/preloader';
-@import 'modal/index';
-@import 'menu-modal/index';
+@import "modal/index";
+@import "menu-modal/index";
