--- a/src/template/index.html
+++ b/src/template/index.html
@@ -19,15 +19,8 @@
     <meta name="format-detection" content="telephone=no" />
   </head>
   <body>
-    <!-- @@include("base/preloader.html",{}) -->
-    <!-- @@include("menu/menu-modal.html",{}) -->
-
     @@include("base/header.html",{}) @@include("section/index.html",{})
-    @@include("base/footer.html",{})
-
-    <!-- @@include("modal/modal-form.html",{})
-    @@include("modal/modal-politics.html",{})
-    @@include("modal/modal-video.html",{}) -->
+    @@include("base/footer.html",{}) @@include("modal/modal-form.html",{})
 
     <script src="js/libraries/libraries.js"></script>
     <script src="js/main/main.js"></script>
