--- a/src/template/section/inspection.html
+++ b/src/template/section/inspection.html
@@ -1,5 +1,74 @@
 <section id="inspection" class="inspection">
-    <div class="container">
-        <h2 class="inspection__title title title--size-"></h2>
+  <div class="container">
+    <div class="box-y">
+      <h2 class="inspection__title title title--size-md">
+        Обследование <br />
+        и инструментальный <br />
+        анализ источника выброса
+      </h2>
+      <div class="inspection__content">
+        <div class="inspection__content-case">
+          <h3
+            class="inspection__content__title title title--size-sm inspection__content-case__title"
+          >
+            Случаи необходимости проведения инструментального анализа
+          </h3>
+          <ol class="inspection__content-case__list">
+            <li>
+              Проектирования системы очистки воздуха на действующем предприятии
+            </li>
+            <li>
+              Выявления причин низкой эффективности газоочистного оборудования
+            </li>
+          </ol>
+        </div>
+        <div class="inspection__content-checklist">
+          <h3 class="inspection__content__title title title--size-sm">
+            Перечень работ
+          </h3>
+          <div class="inspection__content-checklist__wrapper">
+            <p class="inspection__content-checklist__wrapper-item">
+              Замеры на источнике выброса для определения параметров ГВС
+            </p>
+            <p class="inspection__content-checklist__wrapper-item two">
+              Обследование технологического оборудования
+            </p>
+            <p class="inspection__content-checklist__wrapper-item three">
+              Обследование вентиляционной системы
+            </p>
+            <p class="inspection__content-checklist__wrapper-item four">
+              Сверка данных с проектной документацией
+            </p>
+            <p class="inspection__content-checklist__wrapper-item five">
+              Предоставление отчета по результатам обследования
+            </p>
+          </div>
+        </div>
+        <div class="inspection__content-result">
+          <h3 class="inspection__content__title title title--size-sm">
+            Результат работ
+          </h3>
+          <ol class="inspection__content-result__list">
+            <li class="inspection__content-result__list-item">
+              Отчет по результатам обследования, в который включены:
+              <ul>
+                <li>Характеристики выброс</li>
+                <li>Описание технического состояния оборудования</li>
+                <li>Перечень работ для устранения неполадок</li>
+              </ul>
+            </li>
+            <li class="inspection__content-result__list-item">
+              <ul>
+                Проект эффективной системы газоочистки с сопроводительной
+                документацией:
+                <li>чертежи</li>
+                <li>3d модель</li>
+                <li>размещение в плане</li>
+              </ul>
+            </li>
+          </ol>
+        </div>
+      </div>
     </div>
+  </div>
 </section>
