--- a/src/template/section/index.html
+++ b/src/template/section/index.html
@@ -1,6 +1,7 @@
 <main>
   <!-- @@include("specialization.html",{})  -->
-  @@include("inspection.html",{}) @@include("application.html",{})
+  @@include("inspection.html",{}) @@include("inspection_oil.html",{})
+  @@include("application.html",{})
   <!-- @@include("news.html",{}) 
     @@include("questions.html",{})  -->
 </main>
